# info

./: .gitignore  .gitignore.swp  LICENSE  Makefile  README.html  README.md  index.html  index.md  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
_sources/: index.rst.txt
_sources/managing_course/: managing_course.rst.txt
_sources/student/: index.rst.txt  student_gettingstarted.rst.txt
admin/: index.html
admin/gettingstarted/: getting_started.html  index.html
admin/managing_course/: index.html  managing_course.html
admin/managing_participants/: index.html
author/: index.html
author/questiontypes/: index.html  numeric.html
docs/: README.md
docs-redirect/: README.md
docs.old/html/: index.html  objects.inv  searchindex.js
docs/doctrees/: environment.pickle  global.doctree  index.doctree  latexindex.doctree
docs/html/: .buildinfo  genindex.html  global.html  index.html  latexindex.html  objects.inv  search.html  searchindex.js
docs_src/: .index.rst.swp  Makefile  conf.py
docs_src/_build_html/: README.html  genindex.html  objects.inv  searchindex.js
docs_src/_templates/: layout.html
docs_src/admin/: .index.rst.swp
docs_src/author/: example1.html  intro.rst
docs_src/managing_course/: index.rst
docs_src/student/: .index.rst.swp  .student_gettingstarted.rst.swp
documentation/: index.html
gettingstarted/: getting_started.html  index.html
gettingstarted/questiontypes/: linearalgebra.html  (+1 more)
source/: conf.py  global.rst  index.rst  latexindex.rst
student/: index.html  student_gettingstarted.html
(+231 files in other folders)
